--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         </div>
         <div class="right-box">
           <div class="main-image-container">
-            <img src="assets/Hero Image.png" alt="" srcset="" />
+            <img src="Assets/Hero Image.png" alt="" srcset="" />
           </div>
         </div>
       </div>
@@ -107,28 +107,28 @@
     <main>
       <div class="links">
         <a href="#" class="Facebook"
-          ><img src="assets/Facebook Logo.png" alt="Facebook"
+          ><img src="Assets/Facebook Logo.png" alt="Facebook"
         /></a>
         <a href="#" class="Dribbble"
-          ><img src="assets/Dribbble Logo.png" alt="Dribbble"
+          ><img src="Assets/Dribbble Logo.png" alt="Dribbble"
         /></a>
         <a href="#" class="Youtube"
-          ><img src="assets/Youtube Logo.png" alt="Youtube"
+          ><img src="Assets/Youtube Logo.png" alt="Youtube"
         /></a>
         <a href="#" class="Pinterest"
-          ><img src="assets/Pinterest Logo.png" alt="Pinterest"
+          ><img src="Assets/Pinterest Logo.png" alt="Pinterest"
         /></a>
         <a href="#" class="Twitter"
-          ><img src="assets/Twitter Logo.png" alt="Twitter"
+          ><img src="Assets/Twitter Logo.png" alt="Twitter"
         /></a>
         <a href="#" class="Reddit"
-          ><img src="assets/Reddit Logo.png" alt="Reddit"
+          ><img src="Assets/Reddit Logo.png" alt="Reddit"
         /></a>
         <a href="#" class="Google"
-          ><img src="assets/Google Logo.png" alt="Google"
+          ><img src="Assets/Google Logo.png" alt="Google"
         /></a>
         <a href="#" class="Slack"
-          ><img src="assets/Slack Logo.png" alt="Slack"
+          ><img src="Assets/Slack Logo.png" alt="Slack"
         /></a>
       </div>
       <div class="escrow">
