--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         <div class="right-box">
           <div class="phone-image-container">
             <img
-              src="assets/Phone Mockup.jpg"
+              src="Assets/Phone Mockup.jpg"
               alt="Phone Mock"
               class="phone-image"
             />
